--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>
-		The layout must contain at least one heading (h1) tag with the text content "Welcome to Accio Jobs!"
+		Welcome to Accio Jobs!
 	</h1>
 	
     <script type="text/javascript" src="./script.js">
