--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>
-		Welcome to Accio Jobs
+		Welcome to Accio Job
 	</h1>
 	
     <script type="text/javascript" src="./script.js">
